--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Sign_In</string>
+    <string name="job_label">选择身份</string>
+    <string name="jobs_label">选择身份</string>
 </resources>
